fix non mods being able to trigger mod only commands

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bexxtebot-super-deluxe",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bexxtebot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
