--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.6.0",
+    "node-fetch": "^3.3.1",
     "tmi.js": "^1.8.5"
-  }
+  },
+  "type": "module"
 }
